utilities/local-cluster/shared/k3s/grafana-prometheus/alert-manager-ingress.yaml
# cspell: words kubernetescrd
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert-manager-ingress
  namespace: monitoring
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  rules:
    - host: alert-manager.cluster.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-kube-prom-alertmanager
                port:
                  number: 9093
  tls:
    - secretName: alert-manager-tls
      hosts:
        - alert-manager.cluster.test
